--- a/locales/en.json
+++ b/locales/en.json
@@ -40,7 +40,7 @@
       "company": "Full-time / Freelance",
       "title": "Frontend Developer",
       "subtitle": "2022 – Present",
-      "description": "Developed responsive websites using React, Next, Vue, Nuxt, Angular, and Tailwind. Collaborated with clients on UI/UX, and deployed with Vercel."
+      "description": "Developed responsive websites using React, Next, Vue, Nuxt, Angular, and Tailwind. Collaborated with clients on UI/UX, and deployed with windows Server and Hosting."
     },
     "section2": {
       "company": "Personal Project",
