--- a/locales/th.json
+++ b/locales/th.json
@@ -40,7 +40,7 @@
       "company": "Full-time / Freelance",
       "title": "นักพัฒนาเว็บฝั่งหน้าบ้าน",
       "subtitle": "2022 – ปัจจุบัน",
-      "description": "พัฒนาเว็บไซต์แบบ Responsive โดยใช้ React, Next, Vue, Nuxt, Angular และ Tailwindร่วมทำงานกับลูกค้าในด้าน UI/UX และนำเว็บไซต์ขึ้นระบบด้วย Vercel"
+      "description": "พัฒนาเว็บไซต์แบบ Responsive โดยใช้ React, Next, Vue, Nuxt, Angular และ Tailwindร่วมทำงานกับลูกค้าในด้าน UI/UX และนำเว็บไซต์ขึ้นระบบด้วย windows Server และ Hosting"
     },
     "section2": {
       "company": "โปรเจกต์ส่วนตัว",
