--- a/locales/th.json
+++ b/locales/th.json
@@ -54,5 +54,18 @@
       "subtitle": "2020 – ปัจจุบัน",
       "description": "กำลังศึกษาเกี่ยวกับการพัฒนาเว็บ วิศวกรรมซอฟต์แวร์ และมีส่วนร่วมในโปรเจกต์โอเพ่นซอร์สของชั้นเรียน"
     }
+  },
+ "project": {
+    "title": "ผลงาน",
+    "descriptionCard1": "เว็บไซต์ประกาศซื้อ-ขายอสังหาริมทรัพย์ พัฒนาเว็บไซต์สำหรับประกาศซื้อ-ขาย, เช่า, และขายฝากสินทรัพย์และอสังหาริมทรัพย์ทุกประเภท",
+    "descriptionCard2": "เว็บไซต์คำนวณผลแลปจากฐานข้อมูลโรงพยาบาล พัฒนาเว็บไซต์ที่คำนวณผลตรวจสุขภาพจากข้อมูลที่อัปโหลดจากฐานข้อมูลโรงพยาบาล เพื่อช่วยในการวินิจฉัยโรคและแนะนำแนวทางปฏิบัติสำหรับผู้ป่วย",
+    "descriptionCard3": "เว็บไซต์สถานีตำรวจนครบาลลาดกระบัง พัฒนาเว็บไซต์อย่างเป็นทางการสำหรับสถานีตำรวจนครบาลลาดกระบัง",
+    "descriptionCard4": "แอปพลิเคชันจัดการทรัพยากรบุคคล (HRM) พัฒนาแอปพลิเคชันที่ช่วยจัดการงานด้าน HR อย่างครบวงจร เช่น การลา การลงเวลาทำงาน และการจัดการพนักงาน",
+    "descriptionCard5": "แอปพลิเคชันแจ้งเตือนแผ่นดินไหว พัฒนาแอปพลิเคชันที่แจ้งเตือนเมื่อเกิดเหตุแผ่นดินไหว",
+    "descriptionCard6": "API สำหรับเว็บไซต์ระบบวินิจฉัยโรคมะเร็ง (Cancer Diagnosis) ออกแบบและพัฒนา API สำหรับใช้ในระบบวินิจฉัยโรคมะเร็ง",
+    "descriptionCard7": "API สำหรับเว็บไซต์ FMone พัฒนา API สำหรับเว็บไซต์ FMone เพื่อการสื่อสารข้อมูลและการจัดการระบบหลังบ้าน",
+    "descriptionCard8": "API สำหรับแอปพลิเคชันจัดการสัตว์เลี้ยง (Pets Management) พัฒนา API สำหรับระบบจัดการข้อมูลสัตว์เลี้ยง เช่น ข้อมูลสุขภาพและประวัติการรักษา",
+    "website": "เว็บไซต์",
+    "view": "ดูข้อมูล"
   }
 }
